[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
flagset = { version = "0.4.5", features = ["serde"] }
# guardian-common.workspace = true
# libsecp256k1.workspace = true
# serde.workspace = true
jsonschema = "0.18.1"
serde_json = "1.0.127"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
libsecp256k1 = "0.7.1"
sha3 = "0.10.8"
aqua-verifier-rs-types = { git = "https://github.com/inblockio/aqua-verifier-rs-types", branch = "main" }
ethers = "2.0.14"
chrono = "0.4.38"
async-trait = "0.1.83"
base64 = "0.22.1"
hex = "0.4.3"
ethaddr = "0.2.2"


[dev-dependencies]
# serde_json.workspace = true
# pkc-api.workspace = true
